--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,3 @@
 confirm.password=Confirm password
-email.invalid=Email is invalid
+Email.invalid=Email is invalid
+test.message=\u0422\u0435\u0441\u0442\u043E\u0432\u0435 \u043F\u043E\u0432\u0456\u0434\u043E\u043C\u043B\u0435\u043D\u043D\u044F
