Issue #76: try to attach message sources to validator

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 confirm.password=Confirm password
 Email.invalid=Email is invalid
+invalid=This email has invalid format
 test.message=\u0422\u0435\u0441\u0442\u043E\u0432\u0435 \u043F\u043E\u0432\u0456\u0434\u043E\u043C\u043B\u0435\u043D\u043D\u044F
