--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -9,6 +9,9 @@ username.not.equals=\u0422\u0430\u043a\u043e\u0439 \u043f\u043e\u043b\u044c\u043
 empty.name=\u0423\u043a\u0430\u0436\u0438\u0442\u0435 \u043d\u0435\u043f\u0443\u0441\u0442\u043e\u0435 \u0438\u043c\u044f
 invalid.symbol=\u0422\u043e\u043b\u044c\u043a\u043e \u043b\u0430\u0442\u0438\u043d\u0441\u043a\u0438\u0435 \u0431\u0443\u043a\u0432\u044b, \u0446\u0438\u0444\u0440\u044b \u0438 \_
 password.short=\u041c\u0438\u043d\u0438\u043c\u0443\u043c 6 \u0441\u0438\u043c\u0432\u043e\u043b\u043e\u0432
+password.old.invalid=Invalid old password
+field.equals=Fields are not equals
+field.not.equals=Fields should not be equal
 dbexist.error=Wrong argument value
 dbexist.city=Wrong city
 dbexist.position=Wrong position
