Fixed selenium tests

--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -18,5 +18,7 @@ dbexist.position=Wrong position
 dbexist.technology=Wrong technology
 dbexist.company=Wrong company
 
+invalid.email=Неправильный формат email
+
 --signup
 register.user.button=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044f \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f
